<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="20dp"
    android:layout_gravity="center"
    android:background="@drawable/rounded_button"
    android:backgroundTint="@color/teal_200"
    android:orientation="vertical"
    tools:context=".DetailData">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/bio"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/TextView01"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/titik2"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/tvNomor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_lower"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/TextView02"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/titik2"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tvNama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_lower"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/TextView04"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tlpn"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/textView40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/titik2"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tvTelepon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tlpn_lower"
            android:textColor="@color/black"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/TextView03"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/jk"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/titik2"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tvJk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jk_lower"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/TextView05"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/textView50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/titik2"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tvAlamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alamat_lower"
            android:textColor="@color/black"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button"
        android:drawableLeft="@drawable/ic_back"
        android:padding="13dp"
        android:text="@string/back"
        android:textColor="@color/white" />

</LinearLayout>