<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/box"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="30dp"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="15dp"
        android:text="@string/login"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/box"
        app:layout_constraintStart_toStartOf="@id/box"
        app:layout_constraintEnd_toEndOf="@id/box"/>

    <LinearLayout
        android:id="@+id/usernameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin"
        app:layout_constraintStart_toStartOf="@id/box"
        app:layout_constraintEnd_toEndOf="@id/box">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/usernameLayout"
        app:layout_constraintStart_toStartOf="@id/box"
        app:layout_constraintEnd_toEndOf="@id/box">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/teal_200"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:layout_constraintBottom_toBottomOf="@id/box"
        app:layout_constraintStart_toStartOf="@id/box"
        app:layout_constraintEnd_toEndOf="@id/box"/>

</androidx.constraintlayout.widget.ConstraintLayout>